--- a/main-css.css
+++ b/main-css.css
@@ -1,13 +1,16 @@
 #topnav {
   overflow: hidden;
+  padding-right: 30px;
+  display: block;
+  align-items: center;
 }
 
 #topnav a {
   float: right;
   font-family: arial, sans-serif;
   color: black;
+  padding: 14px 10px;
   text-align: center;
-  padding: 14px 16px;
   text-decoration: none;
   font-size: 13px;
 }
@@ -41,6 +44,56 @@
   background: tranparent;
 }
 
+#rft {
+  margin-right: 30px;
+  float: right;
+}
+
+#square {
+  position:relative;
+  float:left;
+  background-color: rgba(0,0,0,.55);
+  width: 20%;
+  padding-bottom: 20%;
+  margin: 1px;
+}
+
+#square:hover{
+  background-color: black;
+}
+
+.btmtop {
+  border-bottom: 1px solid #e4e4e4;
+  margin-left: 30px;
+  font-size: 15px;
+}
+
+.fbar {
+  background-color: #f2f2f2;
+  border-top: 1px solid #e4e4e4;
+  font-family: arial, sans-serif;
+  font-size: small;
+  line-height: 40px;
+  color: rgba(0,0,0,.54);
+  overflow: hidden;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  position: absolute;
+  right: 0;
+  width: 100%;
+}
+
+.fbar a {
+  text-decoration: none;
+  color: rgba(0,0,0,.54);
+  padding-left: 27px;
+}
+
+.fbar a:hover {
+  text-decoration: underline;
+}
+
 .btn {
   background-color: #f2f2f2;
   font-family: arial, sans-serif;
@@ -61,4 +114,26 @@
   color:black;
   border: 1px solid #D3D3D3;
 
+}
+
+.letter {
+  border-radius: 50%;
+  display: block;
+  height: 32px;
+  width: 32px;
+  margin: -1px;
+  overflow: hidden;
+  position: relative;
+}
+
+.bell {
+  background-color: rgba(0,0,0,.55);
+  border-radius: 50%;
+  text-decoration: none;
+  font-size: 20px;
+  position: relative;
+}
+
+.bell:hover {
+  background-color: black;
 }
